--- a/app/test/test3.html
+++ b/app/test/test3.html
@@ -5,9 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-    <div style="color:#00FF00">
+    <div style="color:#e600ff">
         <p>This is a paragraph.</p>
-        <div style="color:#00FF00">
+        <div style="color:#102cbb">
             <h3>This is a header</h3>
                 <div style="color:#00FF00">
                     <h3>This is a header</h3>
